@@ -1,7 +1,7 @@
 Name: Windows
 Version: 1.2.3
 Date: 2016-02-29
-Author: Andy Adler <alder@ncf.ca>
+Author: Andy Adler <alder@ncf.ca>, John Donoghue <john.donoghue@ieee.org>
 Maintainer: John Donoghue <john.donoghue@ieee.org>
 Title: Windows functions
 Description: Provides COM interface and additional functionality on Windows
