@@ -1,3 +1,8 @@
+Summary of important user-visible changes for Windows 1.2.3+:
+------------------------------------------------------------
+ 
+ ** added iscom function
+
 Summary of important user-visible changes for Windows 1.2.3:
 ------------------------------------------------------------
 
